[package]
name = "rustts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hound = "3.4"
itertools = "0.10"
ndarray = "0.15"
tch = "0.8"

[[example]]
name = "tts"
path = "./examples/tts.rs"

[[example]]
name = "vc"
path = "./examples/vc.rs"
